@@ -399,6 +399,12 @@ flag_alias paren	parent_ok
 flag_alias parent	parent_ok
 flag_alias parent_	parent_ok
 flag_alias parent_o	parent_ok
+flag_alias pr		presence
+flag_alias pre		presence
+flag_alias pres		presence
+flag_alias prese	presence
+flag_alias presen	presence
+flag_alias presenc	presence
 flag_alias q		quiet
 flag_alias qu		quiet
 flag_alias qui		quiet
